--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -127,12 +127,17 @@ span{
 
 @media (width >= 300px)
 {
+    .container{
+        position: relative;
+        top: 90px;
+    }
     .colorMode{
         position: relative;
         bottom: 225px;
         right: 240px;
         width: 25px;
     }
+
 
 }
 
