Updted Hero.jsx file & CSS
added a small description

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -72,6 +72,11 @@ span{
 .description{
     max-width: 50ch;
 }
+.arrow{
+    position: relative;
+    top: 150px;
+    font-size: 30px;
+}
 .info{
     display: flex;
     flex-direction: column;
