--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -100,6 +100,13 @@ span{
             right: 215px;
             width: 25px;
         }
+        .arrow{
+            position: relative;
+            top: 250px;
+        }
+        .arrow p{
+            font-size: 25px;
+        }
     }
 
 }
@@ -111,9 +118,37 @@ span{
             right: 445px;
             width: 25px;
         }
+        .arrow{
+            position: relative;
+            top: 150px;
+        }
+        .arrow p{
+            font-size: 25px;
+        }
 
     }
     
+}
+@media (width >= 1200px)
+{
+    .container{
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-evenly;
+        .hero{
+            max-width: 400px;
+            width: 400px;
+        }
+        .arrow{
+            position: relative;
+            top: 50px;
+        }
+        .arrow p{
+            font-size: 25px;
+        }
+        
+    }
+
 }
 
 @media (width >= 1400px)
@@ -126,6 +161,7 @@ span{
             max-width: 400px;
             width: 400px;
         }
+        
     }
 
 }
@@ -141,6 +177,13 @@ span{
         bottom: 225px;
         right: 240px;
         width: 25px;
+    }
+    .arrow{
+        position: relative;
+        top: 10px;
+    }
+    .arrow p{
+        font-size: 15px;
     }
 
 
